testsuite/tests/typecheck/should_fail/T15629.stderr

T15629.hs:26:31: error:
    • Couldn't match kind ‘z’ with ‘ab’
      Expected kind ‘F x ab ~> F x ab’,
        but ‘Comp (F1Sym :: x ~> F x z) F2Sym’ has kind ‘TyFun
                                                           (F x ab) (F x z)
                                                         -> *’
      ‘z’ is a rigid type variable bound by
        the type signature for ‘g’
        at T15629.hs:26:17
      ‘ab’ is a rigid type variable bound by
        the type signature for ‘g’
        at T15629.hs:26:19-20
    • In the first argument of ‘Proxy’, namely
        ‘((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab ~> F x ab)’
      In the type signature:
        g :: forall z ab. Proxy ((Comp (F1Sym :: x
                                                 ~> F x z) F2Sym) :: F x ab ~> F x ab)
      In an equation for ‘f’:
          f _
            = ()
            where
                g ::
                  forall z ab. Proxy ((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab
                                                                            ~> F x ab)
                g = sg Proxy Proxy
